force-app/main/default/objects/ssot__Quote__dlm/fields/ssot__QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuoteNumber__c</fullName>
    <label>Quote Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuoteNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>