force-app/main/default/objects/ssot__Quote__dlm/fields/ssot__QuoteOwnerUserId__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuoteOwnerUserId__c</fullName>
    <label>Quote Owner User</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuoteOwnerUserId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>