force-app/main/default/objects/ssot__Quote__dlm/fields/ssot__QuoteStatusCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuoteStatusCategory__c</fullName>
    <label>Quote Status Category</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuoteStatusCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>