force-app/main/default/objects/ssot__Quote__dlm/fields/ssot__rel_1718543597540_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718543597540_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote_CustomerAccountId_map_Account__rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Quote_CustomerAccountId_map_Account__rel</relationshipLabel>
    <relationshipName>rel_1718543597540_end</relationshipName>
    <type>Lookup</type>
</CustomField>